--- a/src/index.css
+++ b/src/index.css
@@ -558,8 +558,9 @@ i{
     width: 100%;
     height: 450px;
     background-color: var(--btncolor);
-    object-fit: contain;
+    
     display: flex;
+    border-radius: 15px;
     justify-content: center;
     align-items: end;
 }
